# elden-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  release.toml
.devcontainer/: devcontainer.json  post-create
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ci-scripts/: setup-build-ubuntu
.github/workflows/: audit.yml  cd.yml  ci.yml  reusable-cd.yml  reusable-ci.yml
assets/: item.tsv  item.txt
crates/collections/: Cargo.toml  README.md
crates/collections/src/: array.rs  lib.rs  min_max_record.rs  seq_iter.rs  vec2d.rs
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/types/: clip_rect.rs  mod.rs  rect.rs  time.rs
crates/video/: Cargo.toml  README.md
crates/video/src/: capture.rs  lib.rs  metadata.rs
scripts/: analyze  build-dist  txt2tsv
src/: lib.rs  main.rs  traits.rs  video_capture.rs
src/algorithm/: find_line_segments.rs  measure_filled_length.rs  mod.rs
src/collections/: mod.rs  seq_buf.rs  seq_iter.rs  vec2d.rs
src/components/: main_item.rs  mod.rs  side_item.rs
src/geometry/: clip.rs  mod.rs  neighbor.rs
src/image_process/: h_lines.rs  line_finder.rs  mod.rs  tesseract.rs
src/operator/: mod.rs
src/operator/detect_component/: histogram_based.rs  line_based.rs  mod.rs
src/operator/recognize_text/: mod.rs  post_process.rs  rect.rs
src/util/: image_logger.rs  mod.rs
tests/: detect_component.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
