[workspace]
members = ["xtask"]

[package]
name = "elden-analyzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
publish = false
description = "Analyze videos of Eldenring playing and extract information."
readme = "README.md"
repository = "https://github.com/gifnksm/elden-analyzer"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
# crates-io = true
# docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
custom-debug = { version = "0.6.1", package = "custom_debug_derive" }
custom_debug = { version = "0.6.1", package = "custom_debug_derive" }
# imageproc = { version = "0.25.0", default-features = false, features = ["display-window"] }
imageproc = { git = "https://github.com/image-rs/imageproc.git", version = "0.26.0", default-features = false, features = ["display-window"] }
indicatif = "0.17.8"
libc = "0.2.161"
lockfree-object-pool = "0.1.6"
num-rational = { version = "0.4.2", default-features = false, features = ["std"] }
num-traits = "0.2.19"
rayon = "1.10.0"
regex = "1.11.0"
sdl2 = { version = "0.36", features = ["use-vcpkg"] }
tesseract-plumbing = { version = "0.11.0", default-features = false }
thiserror = "1.0.68"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
ffmpeg = { package = "ffmpeg-next", version = "7.0.4", default-features = false, features = ["codec", "format", "software-scaling", "static"] }

[target.'cfg(not(windows))'.dependencies]
ffmpeg = { package = "ffmpeg-next", version = "7.0.4", default-features = false, features = ["codec", "format", "software-scaling"] }

[dev-dependencies]
[build-dependencies]

[profile.dev]

[profile.release]
strip = true

[profile.release-debug]
inherits = "release"
debug = true

[badges]
maintenance = { status = "experimental" }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["ffmpeg[avcodec,avformat,swscale]", "sdl2", "leptonica", "tesseract"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
