[workspace]
members = [ "crates/collections", "crates/kernel", "crates/video", "xtask" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gifnksm/elden-analyzer"

[workspace.dependencies]
custom-debug = { version = "0.6.2", package = "custom_debug_derive" }
elden-analyzer-collections = { path = "crates/collections" }
elden-analyzer-kernel = { path = "crates/kernel" }
elden-analyzer-video ={ path = "crates/video" }
ffmpeg = { package = "ffmpeg-next", version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }
libc = "0.2.170"
num-rational = { version = "0.4.2", default-features = false, features = ["std"] }
num-traits = "0.2.19"
thiserror = "2.0.12"
tracing = "0.1.41"

[package]
name = "elden-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Analyze videos of ELDEN RING playing and extract information."
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = []
categories = []

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
# crates-io = true
# docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
elden-analyzer-collections.workspace = true
elden-analyzer-kernel.workspace = true
elden-analyzer-video.workspace = true
# imageproc = { version = "0.25.0", default-features = false, features = ["display-window"] }
imageproc = { git = "https://github.com/image-rs/imageproc.git", version = "0.26.0", default-features = false, features = ["display-window"] }
indicatif = "0.17.11"
lockfree-object-pool = "0.1.6"
num-rational.workspace = true
num-traits.workspace = true
rayon = "1.10.0"
regex = "1.11.1"
sdl2 = { version = "0.36", features = ["use-vcpkg"] }
tesseract-plumbing = { version = "0.11.0", default-features = false }
tracing.workspace = true
tracing-error = "0.2.1"
tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
[build-dependencies]

[profile.dev]

[profile.release]
strip = true

[profile.release-debug]
inherits = "release"
debug = true

[badges]
maintenance = { status = "experimental" }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["ffmpeg[avcodec,avformat,swscale]", "sdl2", "leptonica", "tesseract"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
